crates/brasa_parser/tests/snapshots/examples__example_fib.snap
---
source: crates/brasa_parser/tests/examples.rs
expression: dump
---
FuncDef fib(n)
  If
    cond
      Binary(<)
        Ident(n)
        Int(2)
    then
      Ident(n)
    else
      Binary(+)
        Call
          Ident(fib)
          Binary(-)
            Ident(n)
            Int(1)
        Call
          Ident(fib)
          Binary(-)
            Ident(n)
            Int(2)
FuncDef fibIter(n)
  Let mut a
    Int(0)
  Let mut b
    Int(1)
  For
    Wildcard
    Range(inclusive=false)
      Int(0)
      Ident(n)
    Let next
      Binary(+)
        Ident(a)
        Ident(b)
    Assign =
      Ident(a)
      Ident(b)
    Assign =
      Ident(b)
      Ident(next)
  Ident(a)
For
  Binding(i)
  Range(inclusive=true)
    Int(0)
    Int(10)
  Call
    Ident(puts)
    StringLit
      Text(raw=false) "fib("
      Interp
        Ident(i)
      Text(raw=false) ") = "
      Interp
        Call
          Ident(fib)
          Ident(i)
Call
  Ident(puts)
  StringLit
    Text(raw=false) "iterative fib(40) = "
    Interp
      Call
        Ident(fibIter)
        Int(40)
