crates/brasa_parser/tests/snapshots/examples__example_pipeline.snap
---
source: crates/brasa_parser/tests/examples.rs
expression: dump
---
StructDef Repo
  field name
  field stars
FuncDef topNames(repos, min)
  Call
    Field(map)
      Call
        Field(sortBy)
          Call
            Field(filter)
              Ident(repos)
            Lambda(r)
              Binary(>=)
                Field(stars)
                  Ident(r)
                Ident(min)
        Lambda(r)
          Unary(-)
            Field(stars)
              Ident(r)
    Lambda(r)
      Field(name)
        Ident(r)
Let repos
  VectorLit
    StructLit(Repo)
      field name
        StringLit
          Text(raw=false) "brasa"
      field stars
        Int(1)
    StructLit(Repo)
      field name
        StringLit
          Text(raw=false) "ignis"
      field stars
        Int(120)
    StructLit(Repo)
      field name
        StringLit
          Text(raw=false) "dbflux"
      field stars
        Int(48)
For
  Binding(name)
  Pipe
    Ident(repos)
    Call
      Ident(topNames)
      Int(10)
  Call
    Ident(puts)
    Ident(name)
Let stars
  MapLit
    entry
      StringLit
        Text(raw=false) "brasa"
      Int(1)
    entry
      StringLit
        Text(raw=false) "ignis"
      Int(120)
Call
  Ident(puts)
  StringLit
    Text(raw=false) "brasa: "
    Interp
      Coalesce
        Index
          Ident(stars)
          StringLit
            Text(raw=false) "brasa"
        Int(0)
Call
  Ident(puts)
  StringLit
    Text(raw=false) "unknown: "
    Interp
      Coalesce
        Index
          Ident(stars)
          StringLit
            Text(raw=false) "nope"
        Int(0)
Call
  Field(each)
    Ident(repos)
  Lambda(r)
    Let tag
      If
        cond
          Binary(>)
            Field(stars)
              Ident(r)
            Int(100)
        then
          StringLit
            Text(raw=false) "hot"
        else
          StringLit
            Text(raw=false) "warm"
    Call
      Ident(puts)
      StringLit
        Interp
          Field(name)
            Ident(r)
        Text(raw=false) " is "
        Interp
          Ident(tag)
